--- a/client/style.css
+++ b/client/style.css
@@ -75,3 +75,32 @@ body, form {
   justify-content: center;
   align-items: center;
 }
+
+.lock {
+  font-size: 48px;
+  color: #dcdcdc;
+}
+
+.game.game-started {
+  padding-bottom: 100px;
+  align-items: flex-end;
+}
+
+.buttons {
+  display: flex;
+  width: 50vw;
+  justify-content: space-between;
+}
+
+.button {
+  padding: 20px;
+  border: 3px solid black;
+  border-radius: 15%;
+  min-width: 82px;
+  display: flex;
+  justify-content: center;
+}
+
+.button.selected {
+  border-color: #4d7198;
+}
