Add reseting after round

--- a/client/style.css
+++ b/client/style.css
@@ -99,6 +99,7 @@ body, form {
   min-width: 82px;
   display: flex;
   justify-content: center;
+  transition: all .2s linear;
 }
 
 .button.selected {
