--- a/client/style.css
+++ b/client/style.css
@@ -113,6 +113,10 @@ body, form {
   background: radial-gradient(ellipse at center,#ffb6c199, white);
 }
 
+.draw {
+  background: radial-gradient(ellipse at center,#f7ff8599, white);
+}
+
 .field-header {
   font-size: 32px;
   text-align: center;
