--- a/client/style.css
+++ b/client/style.css
@@ -157,6 +157,7 @@ body, form {
   border: none;
   outline: none;
   width: 222px;
+  transition: all .2s linear;
 }
 
 .reset.disabled {
@@ -202,6 +203,7 @@ body, form {
 
 .button:hover path,
 .button.selected path {
+  transition: all .2s linear;
   fill: #4d7198;
 }
 
@@ -265,7 +267,7 @@ body, form {
   transform: rotateX(360deg);
 }
 
-.choose-apper-active {
+.choose-appear-active {
   opacity: 1;
   transform: rotateX(0deg);
   transition: all 1.5s linear;
