--- a/client/style.css
+++ b/client/style.css
@@ -237,7 +237,7 @@ body, form {
 .gesture-rock-appear-active {
   opacity: 1;
   transform: scale(1);
-  transition: all 1.5s linear;
+  transition: all .5s linear;
 }
 
 .gesture-paper-appear {
@@ -248,7 +248,7 @@ body, form {
 .gesture-paper-appear-active {
   opacity: 1;
   transform: translateY(0px);
-  transition: all 1.5s linear;
+  transition: all .5s linear;
 }
 
 .gesture-scissors-appear {
@@ -259,7 +259,7 @@ body, form {
 .gesture-scissors-appear-active {
   opacity: 1;
   transform: translateX(0px);
-  transition: all 1.5s linear;
+  transition: all .5s linear;
 }
 
 .gesture-lizard-appear {
@@ -270,7 +270,7 @@ body, form {
 .gesture-lizard-appear-active {
   opacity: 1;
   transform: scale(1);
-  transition: all 1.5s linear;
+  transition: all .5s linear;
 }
 
 .gesture-spock-appear {
@@ -281,7 +281,7 @@ body, form {
 .gesture-spock-appear-active {
   opacity: 1;
   transform: rotateY(0deg);
-  transition: all 1.5s linear;
+  transition: all .5s linear;
 }
 
 .choose-appear {
@@ -292,7 +292,7 @@ body, form {
 .choose-appear-active {
   opacity: 1;
   transform: rotateX(0deg);
-  transition: all 1.5s linear;
+  transition: all .5s linear;
 }
 
 .finished {
