--- a/client/style.css
+++ b/client/style.css
@@ -330,3 +330,35 @@ body, form {
     transform: scale(1);
   }
 }
+
+@media screen and (max-width: 768px) {
+  #container {
+    grid-template:
+      "header" 10vh
+      "game" 70vh
+      "chat" 20vh / 1fr
+  }
+
+  .header {
+    justify-content: space-around;
+    padding: 0;
+  }
+
+  .chat {
+    border-left: none;
+    border-top: 1px solid black;
+  }
+
+  .info {
+    bottom: 22vh;
+  }
+
+  .gesture.button {
+    width: 64px;
+    padding: 15px;
+  }
+
+  .field-body {
+    padding: 0 100px;
+  }
+}
